# face

./: README.md  instructions.md  logs.txt  pyproject.toml  requirements.txt
configs/: arcface_default.json  cases.yaml  geometry_default.json  report.yaml  smoke.yaml
face/core/: cases.py  identity.py  runner.py
face/core/geometry/: __init__.py  combined_face.py  dct.py
face/evaluation/: instruct.py
face/models/: iresnet.py
face/scripts/: __init__.py  build_report.py  run_matrix.py  setup_arcface.py  smoke_dct_image.py  smoke_identity.py  smoke_timing.py  summarize_runs.py
outputs/arcface_identity/20260703_100609_arcface_identity_all_sequential/: launcher_config.json  summary.json  summary.md
outputs/arcface_identity/20260703_103418_arcface_identity_all_sequential/: launcher_config.json  summary.json  summary.md
outputs/arcface_identity_dct_image/20260706_104719_arcface_identity_all_sequential/: launcher_config.json  summary.json  summary.md
outputs/dct_image_smoke/: metrics.json
outputs/reports/arcface_identity/: aggregate_summary.csv  image_index.md  report.html  report.md  report_data_summary.json
outputs/reports/arcface_identity_dct_image/: aggregate_summary.csv  identity_panel_all_runs.csv  report.html  report.md  report_data_summary.json
outputs/smoke/: arcface_setup_report.json
outputs/smoke/20260703_100337_arcface_identity_quick_sequential/: launcher_config.json  summary.json  summary.md
scripts/: download_arcface_checkpoint_a6000.sh  install_linux_a6000.sh  install_windows.ps1
(+2054 files in other folders)
