[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "face"
version = "0.1.0"
description = "ArcFace iResNet-100 white-box geometric identity optimization with downstream InstructPix2Pix evaluation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "torchvision",
  "diffusers",
  "transformers",
  "accelerate",
  "safetensors",
  "pillow",
  "numpy",
  "scipy",
  "pandas",
  "scikit-image",
  "matplotlib",
  "reportlab",
  "sentencepiece",
  "protobuf",
  "deepface",
  "opencv-python",
]

[tool.setuptools.packages.find]
include = ["face*"]
